# pyKomorebi

./: .gitignore  code_gen.py  dap.el  pyproject.toml
pyKomorebi/: __main__.py  console.py  generate.py  model.py  utils.py
pyKomorebi/creator/: __init__.py  ahk.py  code.py  docs.py
pyKomorebi/creator/ahk/: __init__.py  code.py  creator.py  package.py
pyKomorebi/creator/lisp/: __init__.py  code.py  creator.py  generator.py  package.py
pyKomorebi/creator/lisp/helper/: list.py
pyKomorebi/factory/: __init__.py  api_factory.py  console.py  markdown.py
pyKomorebi/generator/: __init__.py  ahk.py  lisp.py
tests/factory/: test_patterns.py
