[tool.poetry]
name = "pyKomorebi"
version = "0.1.0"
description = "Komorebi API generator"
authors = ["Erich Raschle <erich.raschle@rsrg.com>"]
license = "MIT"
readme = "README.org"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.390"
ruff-lsp = "^0.0.59"
ruff = "^0.8.2"
pytest = "^8.3.4"
debugpy = "^1.8.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
